@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.774 2008/10/16 14:47:07 ub Exp $
+# $Id: CHANGES,v 1.775 2008/10/20 14:31:01 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -22,6 +22,7 @@
     availabe in online repository packages.
 
 2.3.4 (2008/??/??)
+ - (2008/10/20) Fixed bug# 3391 - Filter out hazardous characters from redirects.
  - (2008/10/16) Fixed bug# 2415 - Wrong info after editing salutation.
  - (2008/10/15) Fixed bug# 3379 - Documentation of packages got not shown in
     admin package manager.
